--- a/LV_PHUONG/LV_PHUONG/Master Page.Master
+++ b/LV_PHUONG/LV_PHUONG/Master Page.Master
@@ -42,7 +42,7 @@
           <ul class="dropdown-menu settings-menu dropdown-menu-right">
             
             <li><a class="dropdown-item" href="page-user.html"><i class="fa fa-user fa-lg"></i> Profile</a></li>
-            <li><a class="dropdown-item" href="page-login.html"><i class="fa fa-sign-out fa-lg"></i> Logout</a></li>
+            <li><a class="dropdown-item" href="dangnhap.aspx"><i class="fa fa-sign-out fa-lg"></i> Logout</a></li>
           </ul>
         </li>
       </ul>
@@ -57,32 +57,49 @@
         </div>
       </div>
       <ul class="app-menu">
-        <li><a class="app-menu__item active" href="index.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Trang Chủ</span></a></li>
-        <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-edit"></i><span class="app-menu__label">Tiêu Chí Đánh Giá</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+        <li><a class="app-menu__item active" href="index.aspx"><i class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">Danh mục</span></a></li>
+        <li class="treeview"><a class="app-menu__item" href="tieuchidanhgia.aspx" data-toggle="treeview"><i class="app-menu__icon fa fa-edit"></i><span class="app-menu__label">Tiêu Chí Đánh Giá</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
-              <li><a class="treeview-item" href="tieuchidanhgia.aspx"><i class="icon fa fa-circle-o"></i>  Danh sách tiêu chí đánh giá</a></li>
-            <li><a class="treeview-item" href="bootstrap-components.html"><i class="icon fa fa-circle-o"></i>  Nội dung đánh giá</a></li>
-            
- 
+              <li><a class="treeview-item" href="tieuchidanhgia.aspx"><i class="icon fa fa-circle-o"></i>  Danh sách tiêu chí đánh giá</a></li>           
           </ul>
         </li>
-        <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-user-circle-o"></i><span class="app-menu__label">Cán Bộ Đoàn Viên</span><i class="treeview-indicator fa fa-angle-right"></i></a>
-          <ul class="treeview-menu">
-              <li><a class="treeview-item" href="form-custom.html"><i class="icon fa fa-circle-o"></i> Danh sách cán bộ</a></li>
-              <li><a class="treeview-item" href="donvi.aspx"><i class="icon fa fa-circle-o"></i> Danh sách đơn vị</a></li>
-          
-         
-            
-          </ul>
 
-          <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">Điều Kiện Chấm Điểm</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+        <li class="treeview"><a class="app-menu__item" href="tieuchidanhgia.aspx" data-toggle="treeview"><i class="app-menu__icon fa fa-comment-o"></i><span class="app-menu__label"> Nội dung đánh Giá</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
-           <li><a class="treeview-item" href="https://fontawesome.com/v4.7.0/icons/" target="_blank" rel="noopener"><i class="icon fa fa-circle-o"></i>  DS điều kiện chấm điểm</a></li>
-           <li><a class="treeview-item" href="ui-cards.html"><i class="icon fa fa-circle-o"></i> Yêu cầu minh chứng</a></li>
-           <li><a class="treeview-item" href="form-components.html"><i class="icon fa fa-circle-o"></i> Điểm minh chứng</a></li>
+            <li><a class="treeview-item" href="noidungdanhgia.aspx"><i class="icon fa fa-circle-o"></i>  Danh sách nội dung đánh giá</a></li>
           </ul>
         </li>
-        </li> 
+        <li class="treeview"><a class="app-menu__item" href="canbo.aspx" data-toggle="treeview"><i class="app-menu__icon fa fa-user-circle-o"></i><span class="app-menu__label">Cán Bộ Đoàn</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+          <ul class="treeview-menu">
+              <li><a class="treeview-item" href="canbo.aspx"><i class="icon fa fa-circle-o"></i> Danh sách cán bộ</a></li>
+          </ul>
+            </li>
+
+           <li class="treeview"><a class="app-menu__item" href="donvi.aspx" data-toggle="treeview"><i class="app-menu__icon fa fa-home"></i><span class="app-menu__label">Đơn vị</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+          <ul class="treeview-menu">  
+              <li><a class="treeview-item" href="donvi.aspx"><i class="icon fa fa-circle-o"></i> Danh sách đơn vị</a></li>
+          </ul>
+            </li>
+
+          <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-check-square-o"></i><span class="app-menu__label">Điều Kiện Chấm Điểm</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+          <ul class="treeview-menu">
+           <li><a class="treeview-item" href="dieukienchamdiem.aspx" target="_blank" rel="noopener"><i class="icon fa fa-circle-o"></i>  DS điều kiện chấm điểm</a></li>
+        
+          </ul>
+        </li>
+
+            <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-book"></i><span class="app-menu__label">Yêu cầu minh chứng</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+          <ul class="treeview-menu">  
+              <li><a class="treeview-item" href="donvi.aspx"><i class="icon fa fa-circle-o"></i> Danh sách yêu cầu minh chứng</a></li>
+          </ul>
+            </li>
+
+            <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-graduation-cap"></i><span class="app-menu__label">Điểm minh chứng</span><i class="treeview-indicator fa fa-angle-right"></i></a>
+          <ul class="treeview-menu">  
+              <li><a class="treeview-item" href="donvi.aspx"><i class="icon fa fa-circle-o"></i> Danh sách điểm minh chứng</a></li>
+          </ul>
+            </li>
+       
       
        
       </ul>
