--- a/LV_PHUONG/LV_PHUONG/css/main.css
+++ b/LV_PHUONG/LV_PHUONG/css/main.css
@@ -371,7 +371,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: inherit;
+  font-family: initial;
   font-weight: bold;
   line-height: 1.2;
   color: inherit;
@@ -382,7 +382,8 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 1.75rem;
+  font-size: 3.5rem;
+  
 }
 
 h3, .h3 {
@@ -2123,6 +2124,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 
 .form-group {
   margin-bottom: 1rem;
+ 
 }
 
 .form-text {
@@ -2526,6 +2528,7 @@ fieldset:disabled a.btn {
   color: #FFF;
   background-color: #009688;
   border-color: #009688;
+  width:100%;
 }
 
 .btn-primary:hover {
